Base Quaternion implementation with needed features to compute matrix and multiplication

--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\Matrix44Tests.cpp" />
+    <ClCompile Include="source\QuaternionTests.cpp" />
     <ClCompile Include="source\SIMDVectorTests.cpp" />
     <ClCompile Include="source\UnitTestsMain.cpp" />
     <ClCompile Include="source\Vector3Tests.cpp" />
