Refactor to folder structure. VulkanWrapper is a stand alone module, so it should not be mixed with the Renderer of the Engine. This allows for code reusability in the future

--- a/DivisionByZeroEngine/DivisionByZeroEngine.vcxproj
+++ b/DivisionByZeroEngine/DivisionByZeroEngine.vcxproj
@@ -171,9 +171,9 @@
     <ClCompile Include="source\Platform\PlatformSpecific.cpp" />
     <ClCompile Include="source\main_win32.cpp" />
     <ClCompile Include="source\Renderer\Camera.cpp" />
-    <ClCompile Include="source\Renderer\Renderer.cpp" />
-    <ClCompile Include="source\Renderer\VulkanDispatchTable.cpp" />
-    <ClCompile Include="source\Renderer\VulkanModule.cpp" />
+    <ClCompile Include="source\VulkanWrapper\VulkanWrapper.cpp" />
+    <ClCompile Include="source\VulkanWrapper\VulkanDispatchTable.cpp" />
+    <ClCompile Include="source\VulkanWrapper\VulkanModule.cpp" />
     <ClCompile Include="source\Utils\Debug.cpp" />
     <ClCompile Include="source\Window\Window.cpp" />
     <ClCompile Include="source\Window\WindowClass.cpp" />
@@ -192,11 +192,10 @@
     <ClInclude Include="source\Math\Vector2.h" />
     <ClInclude Include="source\Math\Vector4.h" />
     <ClInclude Include="source\Renderer\Camera.h" />
-    <ClInclude Include="source\Renderer\Renderer.h" />
-    <ClInclude Include="source\Renderer\VulkanDispatchTable.h" />
-    <ClInclude Include="source\Renderer\VulkanModule.h" />
-    <ClInclude Include="source\Renderer\VulkanModuleDebug.h" />
-    <ClInclude Include="source\Renderer\VulkanWrapper.h" />
+    <ClInclude Include="source\VulkanWrapper\VulkanDispatchTable.h" />
+    <ClInclude Include="source\VulkanWrapper\VulkanModule.h" />
+    <ClInclude Include="source\VulkanWrapper\VulkanModuleDebug.h" />
+    <ClInclude Include="source\VulkanWrapper\VulkanWrapper.h" />
     <ClInclude Include="source\Utils\Debug.h" />
     <ClInclude Include="source\Window\Window.h" />
     <ClInclude Include="source\Window\WindowClass.h" />
