--- a/DivisionByZeroEngine/DivisionByZeroEngine.vcxproj
+++ b/DivisionByZeroEngine/DivisionByZeroEngine.vcxproj
@@ -172,7 +172,7 @@
     <ClCompile Include="source\Platform\PlatformSpecific.cpp" />
     <ClCompile Include="source\main_win32.cpp" />
     <ClCompile Include="source\Engine\Renderer\Camera.cpp" />
-    <ClCompile Include="source\Engine\Renderer\Renderer.cpp" />
+    <ClCompile Include="source\Engine\Renderer\DisplayRenderer.cpp" />
     <ClCompile Include="source\VulkanWrapper\VulkanWrapper.cpp" />
     <ClCompile Include="source\VulkanWrapper\VulkanDispatchTable.cpp" />
     <ClCompile Include="source\VulkanWrapper\VulkanModule.cpp" />
@@ -183,6 +183,7 @@
   <ItemGroup>
     <ClInclude Include="source\Application\Application.h" />
     <ClInclude Include="source\Common\Callback.h" />
+    <ClInclude Include="source\Common\StackAllocation.h" />
     <ClInclude Include="source\Input\Input.h" />
     <ClInclude Include="source\Math\Matrix44.h" />
     <ClInclude Include="source\Math\Quaternion.h" />
@@ -195,7 +196,7 @@
     <ClInclude Include="source\Math\Vector2.h" />
     <ClInclude Include="source\Math\Vector4.h" />
     <ClInclude Include="source\Engine\Renderer\Camera.h" />
-    <ClInclude Include="source\Engine\Renderer\Renderer.h" />
+    <ClInclude Include="source\Engine\Renderer\DisplayRenderer.h" />
     <ClInclude Include="source\VulkanWrapper\VulkanDispatchTable.h" />
     <ClInclude Include="source\VulkanWrapper\VulkanModule.h" />
     <ClInclude Include="source\VulkanWrapper\VulkanWrapper.h" />
