--- a/DivisionByZeroEngine/DivisionByZeroEngine.vcxproj
+++ b/DivisionByZeroEngine/DivisionByZeroEngine.vcxproj
@@ -168,6 +168,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\Application\Application.cpp" />
+    <ClCompile Include="source\Engine\Renderer\Renderer.cpp" />
     <ClCompile Include="source\Input\Input.cpp" />
     <ClCompile Include="source\Platform\PlatformSpecific.cpp" />
     <ClCompile Include="source\main_win32.cpp" />
@@ -184,6 +185,7 @@
     <ClInclude Include="source\Application\Application.h" />
     <ClInclude Include="source\Common\Callback.h" />
     <ClInclude Include="source\Common\StackAllocation.h" />
+    <ClInclude Include="source\Engine\Renderer\Renderer.h" />
     <ClInclude Include="source\Input\Input.h" />
     <ClInclude Include="source\Math\Matrix44.h" />
     <ClInclude Include="source\Math\Quaternion.h" />
